# slm-agentic-post-training-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
configs/: base.yaml  dpo.yaml  generate_pairs.yaml  grpo.yaml  sft.yaml
pipeline/data/: bfcl.py  grpo_prompts.py  irrelevance.py  preference.py  registry.py  relabel.py  relabeled.py  xlam.py
pipeline/evaluation/: constrained.py  evaluator.py  metrics.py
pipeline/formatting/: chat_template.py  schema_utils.py
pipeline/generation/: pair_generator.py
pipeline/model/: loader.py  lora_config.py
pipeline/reward/: bfcl_grader.py  grpo_reward.py
pipeline/training/: base_trainer.py  dpo_trainer.py  grpo_trainer.py  sft_trainer.py
scripts/: curate_grpo_prompts.py  demo.py  grader_demo.py  relabel_xlam.py  run_pipeline.py  sweep_dpo_beta.sh
tests/: test_constrained.py  test_data.py  test_formatting.py  test_grader.py  test_grpo_reward.py  test_irrelevance.py  test_pair_generator.py  test_preference.py  test_relabel.py  test_schema_utils.py
